before menu logo

--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -1,8 +1,9 @@
 //GRADIENTS
 //==================================================
-$white-gradient: rgba(255,255,255,1);
-$white-gradient-s: rgba(255,255,255,0.2);
+$white-gradient: rgba(30,30,30,1);
+$white-gradient-s: rgba(80,80,80,0);
 
 //BASE COLORS
 //==================================================
 $grey: #444444;
+$white: #fff;
