--- a/css/main.css
+++ b/css/main.css
@@ -1,81 +1,1 @@
-/* line 1, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/base/_defaults.scss */
-body {
-  padding: 0;
-  margin: 0;
-  font-family: lato, san-serif, 'segoe-ui-light';
-}
-
-/* line 1, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_header.scss */
-.header-main {
-  min-height: 500px;
-  width: 100%;
-  background-image: url("../img/screenshot.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
-
-/* line 10, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_header.scss */
-.header-main::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  background: white;
-  background: -webkit-linear-gradient(white, rgba(255, 255, 255, 0.2));
-  /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(white, rgba(255, 255, 255, 0.2));
-  /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(white, rgba(255, 255, 255, 0.2));
-  /* For Firefox 3.6 to 15 */
-  background: linear-gradient(white, rgba(255, 255, 255, 0.2));
-  /* Standard syntax */
-}
-
-/* line 1, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_navigation.scss */
-.menu {
-  position: fixed;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100px;
-  z-index: 5;
-}
-
-/* line 9, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_navigation.scss */
-.menu .menu-inner {
-  padding: 0 50px;
-}
-
-/* line 12, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_navigation.scss */
-.menu .menu-title {
-  float: left;
-  font-size: 32px;
-  color: #444444;
-  font-weight: 400;
-  line-height: 100px;
-}
-
-/* line 19, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_navigation.scss */
-.menu .menu-items {
-  float: right;
-  margin: 0;
-}
-
-/* line 22, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_navigation.scss */
-.menu .menu-items .menu-item {
-  display: block;
-  float: left;
-  line-height: 100px;
-  padding: 0 25px;
-  margin: 0;
-  font-size: 16px;
-  font-weight: 600;
-  text-transform: uppercase;
-}
-
-/*# sourceMappingURL=../css/main.map */
+body{padding:0;margin:0;font-family:lato, san-serif, 'segoe-ui-light'}.header-main{min-height:700px;width:100%;background-image:url("../img/screenshot.png");background-position:center;background-repeat:no-repeat;background-size:cover;position:relative}.header-main::after{content:'';position:absolute;top:0;right:0;height:100%;width:100%;background:#1e1e1e;background:-webkit-linear-gradient(#1e1e1e, rgba(80,80,80,0));background:-o-linear-gradient(#1e1e1e, rgba(80,80,80,0));background:-moz-linear-gradient(#1e1e1e, rgba(80,80,80,0));background:linear-gradient(#1e1e1e, rgba(80,80,80,0))}.header-main .logo{width:800px;height:500px;position:absolute;bottom:50%;left:50%;margin-bottom:-250px;margin-left:-400px;background-image:url("../img/logo.png");background-position:center;background-repeat:no-repeat;background-size:contain;z-index:10}.header-bottom{background-color:#ececec;float:left;width:100%;height:500px}.menu{position:fixed;position:absolute;top:0;left:0;width:100%;height:100px;z-index:5}.menu .menu-inner{display:block;height:100px;margin:0 auto;max-width:1200px;padding:0 50px;width:100%}.menu .menu-inner .menu-wrapper{width:100%;height:100px}.menu .menu-title{float:left;font-size:32px;color:#fff;font-weight:400;line-height:100px}.menu .menu-items{float:right;margin:0}.menu .menu-items .menu-item{color:#fff;display:block;float:left;line-height:100px;padding:0 25px;margin:0;font-size:16px;font-weight:600;text-transform:uppercase}
