--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,5 +1,5 @@
 .header-main {
-	min-height: 500px;
+	min-height: 700px;
 	width: 100%;
 	background-image: url('../img/screenshot.png');
 	background-position: center;
@@ -20,4 +20,27 @@
     	background: -moz-linear-gradient($white-gradient, $white-gradient-s); /* For Firefox 3.6 to 15 */
     	background: linear-gradient($white-gradient, $white-gradient-s); /* Standard syntax */
 	}
+	.logo{
+		width: 800px;
+		height: 500px;
+		//background-color: $grey;
+		position: absolute;
+		bottom: 50%;
+		left: 50%;
+		margin-bottom: -250px;
+		margin-left: -400px;
+		background-image: url('../img/logo.png');
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: contain;
+		z-index: 10;
+
+	}
+}
+
+.header-bottom{
+	background-color: #ececec;
+	float: left;
+	width: 100%;
+	height: 500px;
 }
