--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,3 +1,5 @@
+
+
 .menu {
 	position: fixed;
 	position: absolute;
@@ -7,12 +9,23 @@
 	height: 100px;
 	z-index: 5;
 	.menu-inner{
+		display: block;
+		height: $menu-height;
+		margin: 0 auto;
+		max-width: 1200px;
 		padding: 0 50px;
+		width: 100%;
+		//border
+		.menu-wrapper{
+				width: 100%;
+				height: $menu-height;
+				//border-bottom: 1px solid $white;
+		}
 	}
 	.menu-title{
 		float: left;
 		font-size: 32px;
-		color: $grey;
+		color: $white;
 		font-weight: 400;
 		line-height: 100px;
 	}
@@ -20,6 +33,7 @@
 		float: right;
 		margin: 0;
 		.menu-item{
+			color: $white;
 			display: block;
 			float: left;
 			line-height: 100px;
@@ -27,7 +41,7 @@
 			margin: 0;
 			font-size: 16px;
 			font-weight: 600;
-			text-transform: uppercase;	
+			text-transform: uppercase;
 		}
 	}
 }
