--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,5 @@
+@import 'base/variables.scss';
 @import 'base/colors.scss';
 @import 'base/defaults.scss';
 @import 'components/header.scss';
 @import 'components/navigation';
-
