basic menu and frame up, added font-awesome to the project

--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -1,9 +1,16 @@
 //GRADIENTS
 //==================================================
-$white-gradient: rgba(30,30,30,1);
-$white-gradient-s: rgba(80,80,80,0);
+$white-gradient: rgba(110,178,189,1);
+$white-gradient-s: rgba(187,222,228,0.5);
 
 //BASE COLORS
 //==================================================
 $grey: #444444;
 $white: #fff;
+
+$light-blue: #bbdee4;
+$blue: #6eb2bd;
+$green: #11a67e;
+$light-green: #7ccbaa;
+$light-orange: #fd8343;
+$orange: #df5b12;
