--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,13 +1,12 @@
 .header-main {
-	min-height: 700px;
+	min-height: 550px;
 	width: 100%;
 	background-image: url('../img/screenshot.png');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
 	position: relative;
-
-	&::after{
+	&::before{
 		content:'';
 		position: absolute;
 		top:0;
@@ -19,6 +18,17 @@
     	background: -o-linear-gradient($white-gradient, $white-gradient-s); /* For Opera 11.1 to 12.0 */
     	background: -moz-linear-gradient($white-gradient, $white-gradient-s); /* For Firefox 3.6 to 15 */
     	background: linear-gradient($white-gradient, $white-gradient-s); /* Standard syntax */
+	}
+	&::after{
+		content:'';
+		position: absolute;
+		bottom:-300px;
+		right: -500px;
+		height: 400px;
+		width: 300%;
+		background: $white;
+		transform: rotate(-8deg);
+		z-index:0;
 	}
 	.logo{
 		width: 800px;
@@ -38,9 +48,30 @@
 	}
 }
 
+
 .header-bottom{
-	background-color: #ececec;
+	position: relative;
+	background-color: #fff;
+	display: inline-block;
 	float: left;
 	width: 100%;
 	height: 500px;
+	.header-bottom-inner{
+		margin: -125px auto 0;
+		z-index: 999;
+		max-width: 768px;
+
+		text-align: center;
+		color:  $grey;
+		.game-icon{
+			color: $grey;
+		}
+		h2{
+
+		}
+		p{
+			font-size: 18px;
+			line-height: 28px;
+		}
+	}
 }
