--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -11,7 +11,7 @@
 	.menu-inner{
 		display: block;
 		height: $menu-height;
-		margin: 0 auto;
+		margin: 25px auto 0;
 		max-width: 1200px;
 		padding: 0 50px;
 		width: 100%;
@@ -29,6 +29,10 @@
 		font-weight: 400;
 		line-height: 100px;
 	}
+	.menu-logo{
+		width: 200px;
+		height: 160px;
+	}
 	.menu-items{
 		float: right;
 		margin: 0;
@@ -36,12 +40,17 @@
 			color: $white;
 			display: block;
 			float: left;
-			line-height: 100px;
+			line-height: $menu-height;
 			padding: 0 25px;
-			margin: 0;
-			font-size: 16px;
+			margin: 25px 0 0;
+			font-size: 18px;
 			font-weight: 600;
 			text-transform: uppercase;
+			transition: color 1s ease;
+			&:hover{
+				color: $light-orange;
+				cursor: pointer;
+			}
 		}
 	}
 }
