--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,3 +4,5 @@
 @import 'base/defaults.scss';
 @import 'components/header.scss';
 @import 'components/navigation';
+@import 'components/updates.scss';
+@import 'components/team.scss';
