--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -6,6 +6,7 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 	position: relative;
+	display: inline-block;
 	&::before{
 		content:'';
 		position: absolute;
@@ -27,36 +28,21 @@
 		height: 400px;
 		width: 300%;
 		background: $white;
-		transform: rotate(-8deg);
+		transform: rotate(-6deg);
 		z-index:0;
-	}
-	.logo{
-		width: 800px;
-		height: 500px;
-		//background-color: $grey;
-		position: absolute;
-		bottom: 50%;
-		left: 50%;
-		margin-bottom: -250px;
-		margin-left: -400px;
-		background-image: url('../img/logo.png');
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: contain;
-		z-index: 10;
-
 	}
 }
 
 
-.header-bottom{
+.about{
+	display: inline-block;
 	position: relative;
 	background-color: #fff;
 	display: inline-block;
 	float: left;
 	width: 100%;
-	height: 500px;
-	.header-bottom-inner{
+	margin-bottom: 100px;
+	.about-inner{
 		margin: -125px auto 0;
 		z-index: 999;
 		max-width: 768px;
