before the team changes

--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -6,11 +6,13 @@ $white-gradient-s: rgba(187,222,228,0.5);
 //BASE COLORS
 //==================================================
 $grey: #444444;
+$grey2: #aaa;
+$bg-grey: #ededed;
 $white: #fff;
 
-$light-blue: #bbdee4;
+$light-blue: #5e8e96;
 $blue: #6eb2bd;
 $green: #11a67e;
 $light-green: #7ccbaa;
-$light-orange: #fd8343;
-$orange: #df5b12;
+$light-orange: #f59462;
+$orange: #f99e6e;
