--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,3 +6,4 @@
 @import 'components/navigation';
 @import 'components/updates.scss';
 @import 'components/team.scss';
+@import 'components/contact.scss';
