--- a/sass/components/_updates.scss
+++ b/sass/components/_updates.scss
@@ -1,10 +1,12 @@
+$ub-bar:  40px;
+
 .updates{
   width: 100%;
   background-color: $light-orange;
   display: inline-block;
   text-align: center;
   .updates-inner{
-    margin: 100px auto;
+    margin: 50px auto 200px;
     color: $white;
     p{
 			font-size: 18px;
@@ -13,13 +15,70 @@
     .update-blocks{
       color: $grey;
       display: flex;
+      margin-top: 100px;
+      text-align: left;
       .update-block{
          background:  $white;
          opacity: 0.9;
-         margin:10px 2.5% 0 2.5%;
+         margin:10px 2.5% 0 5%;
          flex-grow: 1;
          display: inline-block;
-         width: calc(90% * (1/2));
+         width: calc(85% * (1/2));
+         position: relative;
+         padding: 20px 30px 50px;
+         &:nth-child(2){
+           margin:10px 5% 0 2.5%;
+         }
+         /*&::after{
+           content: '';
+           display: block;
+           width: 150px;
+           height: 50px;
+           background: $light-orange;
+           position: absolute;
+           bottom:0;
+           right: -75px;
+           transform: rotate(-45deg);
+         }
+         &::before{
+           content: '';
+           display: block;
+           width: 150px;
+           height: 50px;
+           background: $light-orange;
+           position: absolute;
+           bottom:0;
+           left: -75px;
+           transform: rotate(45deg);
+         }*/
+         h2{
+           display: block;
+           width: 60%;
+           background: $white;
+           height: $ub-bar;
+           margin-top: -$ub-bar;
+           position: absolute;
+           top: 0;
+           left: 0;
+           border-top: 4px solid $grey;
+           text-align: left;
+           padding: 25px 30px 0;
+         }
+         .details{
+           margin-top: 25px;
+           text-align: left;
+           width: 100%;
+           display: inline-block;
+           .detail{
+             float: left;
+             i{
+               margin-right: 10px;
+             }
+             span{
+               color: $grey2;
+             }
+           }
+         }
       }
     }
   }
