--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,7 +1,7 @@
-$team-block:  #ccc;
+$team-block:  #fff;
 
 .team{
-  background: $bg-grey;
+  background: $white;
   text-align: center;
   display: flex;
   width: 100%;
@@ -10,27 +10,49 @@ $team-block:  #ccc;
     width: 100%;
     margin: 100px auto;
     .team-blocks{
-      color: white;
-      .team-block-info,.team-block-image{
-        width: 25%;
+      color: $grey;
+      width: 80%;
+      margin: 50px 10% 0;
+      .team-block{
+        width: 50%;
         float: left;
-        height: 400px;
+        padding: 50px 0 25px;
+        box-sizing: border-box;
+        &:nth-child(2n){
+          border-left: 2px solid $grey;
+        }
+        &:nth-child(3),&:nth-child(4){
+          border-top: 2px solid $grey;
+        }
       }
+
       .team-block-info{
-        opacity: 0.9;
+        width: 100%;
+        height: 100px;
         background-color: $team-block;
         display: table;
         .blue{}
         .info-inner{
           display: table-cell;
           vertical-align: middle;
+          h3{
+            margin-bottom: 0;
+          }
+          p{
+            margin-top: 5px;
+            font-style: italic;
+          }
         }
       }
       .team-block-image{
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
-        position: relative;
+        height: 300px;
+        width: 300px;
+        border-radius: 50%;
+        display: block;
+        margin: 0 auto;
         &.image-adam{
           background-image: url('../img/adam.png');
           .triangle-container{
