finished the contact section, the download section and added the footer html elements

--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -12,6 +12,7 @@ $white: #fff;
 
 $light-blue: #5e8e96;
 $blue: #6eb2bd;
+$dark-blue: #375458;
 $green: #11a67e;
 $light-green: #7ccbaa;
 $light-orange: #f59462;
