--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,3 +7,4 @@
 @import 'components/updates.scss';
 @import 'components/team.scss';
 @import 'components/contact.scss';
+@import 'components/downloads.scss';
