added breakpoint maxin and values for breakpoints, fixed up the first slanted white skew-line

--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -10,6 +10,7 @@ $grey2: #aaa;
 $bg-grey: #ededed;
 $white: #fff;
 
+$x-light-blue: #94c5cc;
 $light-blue: #5e8e96;
 $blue: #6eb2bd;
 $dark-blue: #375458;
