--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -3,7 +3,7 @@
   background: $grey;
   display: flex;
   width: 100%;
-  color: #efefef;
+  color: #aaa;
   .contact-inner{
     margin: 100px auto 100px;
     form{
