--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -13,8 +13,9 @@
 		height: $menu-height;
 		margin: 25px auto 0;
 		max-width: 1200px;
-		padding: 0 50px;
+		margin: 0 auto;
 		width: 100%;
+		font-family: Questrial;
 		//border
 		.menu-wrapper{
 				width: 100%;
@@ -29,21 +30,32 @@
 		font-weight: 400;
 		line-height: 100px;
 	}
-	.menu-logo{
-		width: 300px;
-		height: auto;
+	.logo-wrapper{
+		float:left;
+		width: 25%;
+		min-width: 300px;
+		.menu-logo{
+			width: 300px;
+			height: auto;
+		}
 	}
+
 	.menu-items{
+		width: 65%;
 		float: right;
+		display: block;
 		margin: 0;
+		@include breakpoint($lg){
+			display: none;
+		}
 		.menu-item{
 			color: $white;
 			display: block;
-			float: left;
+			float: right;
 			line-height: $menu-height;
 			padding: 0 25px;
 			margin: 35px 0 0;
-			font-size: 18px;
+			font-size: 16px;
 			font-weight: 600;
 			text-transform: uppercase;
 			transition: color 1s ease;
