--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,9 +2,11 @@
 @import 'base/variables.scss';
 @import 'base/colors.scss';
 @import 'base/defaults.scss';
+@import 'base/layouts.scss';
 @import 'components/header.scss';
 @import 'components/navigation';
 @import 'components/updates.scss';
 @import 'components/team.scss';
 @import 'components/contact.scss';
 @import 'components/downloads.scss';
+@import 'components/footer.scss';
