Added some animations and made the site responsive

--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -6,7 +6,7 @@ $white-gradient-s: rgba(187,222,228,0.5);
 //BASE COLORS
 //==================================================
 $grey: #444444;
-$grey2: #aaa;
+$grey2: #AAA;
 $bg-grey: #ededed;
 $white: #fff;
 
