--- a/sass/base/_layouts.scss
+++ b/sass/base/_layouts.scss
@@ -1,6 +1,7 @@
 // BREAKPOINT VARIABLES
 // =============================================================================
 
+$xxs: ( max:  600px );
 $xs: ( max:  767px );
 $sm: ( max:  768px );
 $md: ( max:  992px );
