--- a/sass/components/_downloads.scss
+++ b/sass/components/_downloads.scss
@@ -8,12 +8,18 @@
 
   .downloads-inner{
     margin: 50px auto;
+    @include breakpoint($xs){
+      h2{
+        font-size: 24px;
+        padding: 25px;
+      }
+    }
     .download-btn{
       border: 2px solid $white;
       display: inline-block;
       border-radius: 10px;
       padding: 20px 30px;
-      margin: auto 15px;
+      margin: 15px 15px 0;
       transition: all 1s ease;
       color: $white;
       &:hover{
