--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -2,7 +2,8 @@
 	min-height: 550px;
 	width: 100%;
 	background-image: url('../img/screenshot.png');
-	background-position: center;
+	background-attachment: fixed;
+	background-position: bottom;
 	background-repeat: no-repeat;
 	background-size: cover;
 	position: relative;
@@ -77,9 +78,10 @@
 	.about-inner{
 		margin: -50px auto 0;
 		z-index: 999;
-		max-width: 768px;
-
+		max-width: 700px;
+		padding: 50px 25px 0;
 		text-align: center;
+		overflow: hidden;
 		color:  $grey;
 		.game-icon{
 			color: $grey;
