--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -5,24 +5,77 @@ $team-block:  #fff;
   text-align: center;
   display: flex;
   width: 100%;
+  position: relative;
+  &::after{
+    content: '';
+    display: block;
+    width: 2px;
+    height: 1155px;
+    background: $grey2;
+    position: absolute;
+    top: 300px;
+    left: 50%;
+    margin-left: -2px;
+    @include breakpoint($md){
+      display: none;
+    }
+
+  }
   .team-inner{
     color: $grey;
     width: 100%;
-    margin: 100px auto;
+    max-width: 1200px;
+    margin: 100px auto 0;
+    padding: 0 0 100px;
     .team-blocks{
       color: $grey;
       width: 80%;
       margin: 50px 10% 0;
+      @include breakpoint($md){
+          margin: 100px 10% 0;
+      }
       .team-block{
         width: 50%;
         float: left;
         padding: 50px 0 25px;
         box-sizing: border-box;
-        &:nth-child(2n){
-          border-left: 2px solid $grey;
+        position: relative;
+        @include breakpoint($md){
+          width: 80%;
+          margin: 0 10% 0;
+          border: 0;
+          padding: 75px 0 50px;
+          &::after{
+            content: '';
+            display: block;
+            height: 1px;
+            background: $grey2;
+            width: 90%;
+            position: absolute;
+            top: 0;
+            left: 5%;
+            transform: rotate(-15deg);
+          }
         }
-        &:nth-child(3),&:nth-child(4){
-          border-top: 2px solid $grey;
+        &:nth-child(1){
+          //border-right: 1px solid $grey;
+        }
+        &:nth-child(2){
+          //border-left: 1px solid $grey;
+        }
+        &:nth-child(3){
+          border-top: 2px solid $grey2;
+          @include breakpoint($md){
+            border: 0;
+          }
+          //border-right: 1px solid $grey;
+        }
+        &:nth-child(4),&:nth-child(4){
+          //border-left: 1px solid $grey;
+          border-top: 2px solid $grey2;
+          @include breakpoint($md){
+            border: 0;
+          }
         }
       }
 
@@ -53,6 +106,10 @@ $team-block:  #fff;
         border-radius: 50%;
         display: block;
         margin: 0 auto;
+        @include breakpoint($xxs){
+          height: 200px;
+          width: 200px;
+        }
         &.image-adam{
           background-image: url('../img/adam.png');
           .triangle-container{
