--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -21,6 +21,9 @@
     	background: -moz-linear-gradient($white-gradient, $white-gradient-s); /* For Firefox 3.6 to 15 */
     	background: linear-gradient($white-gradient, $white-gradient-s); /* Standard syntax */
 	}
+	@include breakpoint($md){
+		min-height: 400px;
+	}
 
 }
 
@@ -43,6 +46,9 @@
 			transform: rotate(-4deg);
 			@include breakpoint($lg){
 				transform: rotate(-5deg);
+			}
+			@include breakpoint($md){
+				transform: rotate(-3deg);
 			}
 			z-index:0;
 		}
