--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,5 +1,3 @@
-
-
 .menu {
 	position: fixed;
 	position: absolute;
@@ -28,6 +26,32 @@
 					right: 10%;
 					color: $white;
 					transition: all 1s ease;
+					.bar1, .bar2, .bar3 {
+					    width: 35px;
+					    height: 5px;
+					    background-color: $white;
+					    margin: 6px 0;
+					    transition: 0.4s;
+					}
+					/* Rotate first bar */
+					&.expanded{
+					 .bar1 {
+						    -webkit-transform: rotate(-45deg) translate(-8px, 6px) ;
+						    transform: rotate(-45deg) translate(-8px, 6px) ;
+						}
+
+						/* Fade out the second bar */
+					  .bar2 {
+						    opacity: 0;
+						}
+
+						/* Rotate last bar */
+					 .bar3 {
+						    -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+						    transform: rotate(45deg) translate(-8px, -8px) ;
+						}
+					}
+
 					&:hover{
 						color: $light-orange;
 						cursor: pointer;
@@ -83,6 +107,35 @@
 		@include breakpoint($lg){
 			display: none;
 		}
+		a{
+			@include breakpoint($lg){
+
+				width: 100%;
+				height: 70px;
+				display: block;
+			}
+			.menu-item{
+				box-sizing: border-box;
+		    -moz-box-sizing: border-box;
+		    -webkit-box-sizing: border-box;
+				color: $white;
+				display: block;
+				float: right;
+				margin-top: $menu-height + 35px;
+				padding: 0 25px;
+				font-size: 16px;
+				font-weight: 600;
+				text-transform: uppercase;
+				transition: color 1s ease;
+				@include breakpoint($lg){
+					margin-top: 0;
+				}
+				&:hover{
+					color: $light-orange;
+					cursor: pointer;
+				}
+			}
+		}
 		&.expanded{
 			display: block !important;
 			position: absolute;
@@ -95,32 +148,15 @@
 				float: left;
 				width: 80%;
 				margin: auto 10%;
-				height: $menu-mobile/5-1px;
-				line-height: $menu-mobile/5-1px;
+				height: 70px;
+				line-height: 70px;
 				text-align: center;
 				z-index: -1;
 				border-bottom: 1px solid $grey2;
-				&:last-child{
-					border: 0;
-				}
+
 			}
-		}
-		.menu-item{
-			color: $white;
-			display: block;
-			float: right;
-			margin-top: $menu-height + 35px;
-			padding: 0 25px;
-			font-size: 16px;
-			font-weight: 600;
-			text-transform: uppercase;
-			transition: color 1s ease;
-			@include breakpoint($lg){
-				margin-top: 0;
-			}
-			&:hover{
-				color: $light-orange;
-				cursor: pointer;
+			a:last-child .menu-item{
+				border: 0;
 			}
 		}
 	}
