--- a/sass/components/_updates.scss
+++ b/sass/components/_updates.scss
@@ -1,6 +1,8 @@
 $ub-bar:  40px;
 
 .updates{
+  margin-top: -50px;
+  padding-top: 50px;
   width: 100%;
   background-color: $light-orange;
   display: inline-block;
