--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import 'components/header.scss';
 @import 'components/navigation';
 @import 'components/updates.scss';
+@import 'components/gameplay.scss';
 @import 'components/team.scss';
 @import 'components/contact.scss';
 @import 'components/downloads.scss';
