--- a/css/main.css
+++ b/css/main.css
@@ -389,7 +389,14 @@ body {
   line-height: 28px;
 }
 
-/* line 18, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
+@media screen and (max-width: 992px) {
+  /* line 14, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
+  .updates .updates-inner p {
+    font-size: 14px;
+  }
+}
+
+/* line 21, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
 .updates .updates-inner .update-blocks {
   color: #444444;
   display: flex;
@@ -399,13 +406,13 @@ body {
 }
 
 @media screen and (max-width: 992px) {
-  /* line 18, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
+  /* line 21, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
   .updates .updates-inner .update-blocks {
     margin-top: 50px;
   }
 }
 
-/* line 27, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
+/* line 30, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
 .updates .updates-inner .update-blocks .update-block {
   background: #fff;
   margin: 10px 2.5% 0 5%;
@@ -438,7 +445,7 @@ body {
 }
 
 @media screen and (max-width: 992px) {
-  /* line 27, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
+  /* line 30, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
   .updates .updates-inner .update-blocks .update-block {
     width: 80%;
     flex: 0 0 80%;
@@ -446,25 +453,25 @@ body {
   }
 }
 
-/* line 40, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
+/* line 43, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
 .updates .updates-inner .update-blocks .update-block:nth-child(2) {
   margin: 10px 5% 0 2.5%;
 }
 
 @media screen and (max-width: 992px) {
-  /* line 40, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
+  /* line 43, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
   .updates .updates-inner .update-blocks .update-block:nth-child(2) {
     margin: 90px 10% 0 10%;
   }
 }
 
-/* line 47, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
+/* line 50, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
 .updates .updates-inner .update-blocks .update-block .details, .updates .updates-inner .update-blocks .update-block p {
   padding-right: 30px;
   padding-left: 30px;
 }
 
-/* line 75, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
+/* line 78, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
 .updates .updates-inner .update-blocks .update-block h2 {
   display: block;
   width: 60%;
@@ -479,7 +486,7 @@ body {
   padding: 25px 30px 0;
 }
 
-/* line 88, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
+/* line 91, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
 .updates .updates-inner .update-blocks .update-block .details {
   margin-top: 25px;
   text-align: left;
@@ -487,17 +494,17 @@ body {
   display: inline-block;
 }
 
-/* line 93, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
+/* line 96, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
 .updates .updates-inner .update-blocks .update-block .details .detail {
   float: left;
 }
 
-/* line 95, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
+/* line 98, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
 .updates .updates-inner .update-blocks .update-block .details .detail i {
   margin-right: 10px;
 }
 
-/* line 98, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
+/* line 101, C:/Users/Adamr/Documents/My Web Sites/RiposteWebsite/sass/components/_updates.scss */
 .updates .updates-inner .update-blocks .update-block .details .detail span {
   color: #AAA;
 }
