--- a/sass/components/_updates.scss
+++ b/sass/components/_updates.scss
@@ -14,6 +14,9 @@ $ub-bar:  40px;
     p{
 			font-size: 18px;
 			line-height: 28px;
+      @include breakpoint($md){
+        font-size: 14px;
+      }
 		}
     .update-blocks{
       color: $grey;
